fix: projects layout issues are fixed

--- a/styles/global.css
+++ b/styles/global.css
@@ -180,7 +180,9 @@ aside {
   font-weight: bold;
 }
 
-#profile-my-projects-header span{
+#profile-my-projects-header a{
+  color: var(--text-color);
+  text-decoration: none;
   font-size: 14px;
   font-weight: normal;
 }
@@ -192,7 +194,7 @@ aside {
 }
 
 #profile-my-projects-main .project {
-  flex: 0.5;
+  flex: 1;
   display: flex;
   flex-direction: column;
   background-color: var(--bg-cards);
@@ -223,6 +225,7 @@ aside {
 }
 
 #profile-my-projects-main .project .project-footer {
+  margin-top: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -258,7 +261,7 @@ aside {
 #profile-my-projects-main .project .project-footer .project-footer-language .elipse {
   width: 15px;
   height: 15px;
-  background-color: #e7de79;
+  background-color: rgba(49, 120, 198, 0.5);
   border-radius: 50%;
-  border: 2px solid #837e9f;
+  border: 2px solid rgba(49, 120, 198, 1);
 }
